# spin-web

./: README.md  spin
template/: Makefile  README.md  dune-project  esy.json  {{ project_slug }}.opam
template/lib/{{ project_snake}}/: config.ml  db.ml  db.mli  dune
template/lib/{{ project_snake}}_web/: dune  router.ml  {{ project_snake }}_web.ml
template/lib/{{ project_snake}}_web/handlers/: dune  page.ml
template/lib/{{ project_snake}}_web/middlewares/: dune  logger.ml
template/lib/{{ project_snake}}_web/views/: dune  layout.ml  page.ml
template/test/support/: test_utils.ml
